fixed content bleeding our courses

--- a/styles/our-courses.css
+++ b/styles/our-courses.css
@@ -54,6 +54,7 @@ nav {
   color: #000000;
 }
 .content-top {
+  width: 100%;
   background: linear-gradient(
     180deg,
     rgba(255, 255, 255, 1) 0%,
@@ -106,14 +107,17 @@ nav {
 .standard-courses-container,
 .conversation-courses-container {
   display: flex;
+  box-sizing: border-box;
   flex-direction: row;
-  width: 80vw;
+  width: 90vw;
   margin: auto;
-  padding-top: 4em;
+  padding-top: 3em;
 }
 .standard-courses-content,
 .conversation-courses-content {
-  padding: 2em;
+  width: 50%;
+  box-sizing: border-box;
+  padding: 1em;
 }
 .mini-message-standard-courses {
   font-family: Poppins;
@@ -223,20 +227,26 @@ nav {
   text-align: center;
 }
 .content-top-2 {
+  width: 100%;
   background-image: linear-gradient(to top, #ffffff, #fff4da);
 }
 .refresher-courses-container {
   display: flex;
+  box-sizing: border-box;
   flex-direction: row;
-  width: 80vw;
+  width: 90vw;
   margin: auto;
   padding-top: 4em;
 }
 .refresher-courses-content {
-  padding-left: 2em;
+  box-sizing: border-box;
+  width: 50%;
+  padding-left: 1em;
 }
+.standard-courses-image,
 .refresher-courses-image,
 .conversation-courses-image {
+  width: 50%;
   height: 50%;
 }
 .mini-message-refresher-courses {
